--- a/EasyPC/EasyPC.API/Dockerfile
+++ b/EasyPC/EasyPC.API/Dockerfile
@@ -12,20 +12,20 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["EasyPC/EasyPC.API.csproj", "EasyPC/"]
+COPY ["EasyPC.API/EasyPC.API.csproj", "EasyPC.API/"]
 COPY ["EasyPC.Model/EasyPC.Model.csproj", "EasyPC.Model/"]
 COPY ["EasyPC.Services/EasyPC.Services.csproj", "EasyPC.Services/"]
-RUN dotnet restore "./EasyPC/EasyPC.API.csproj"
+RUN dotnet restore "./EasyPC.API/EasyPC.API.csproj"
 COPY . .
-COPY ["EasyPC/Assets", "/src/EasyPC/Assets"]
-WORKDIR "/src/EasyPC"
+COPY ["EasyPC.API/Assets", "/src/EasyPC.API/Assets"]
+WORKDIR "/src/EasyPC.API"
 RUN dotnet build "./EasyPC.API.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 # This stage is used to publish the service project to be copied to the final stage
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
 RUN dotnet publish "./EasyPC.API.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
-COPY --from=build /src/EasyPC/Assets /app/publish/Assets
+COPY --from=build /src/EasyPC.API/Assets /app/publish/Assets
 
 # This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
 FROM base AS final
