--- a/EasyPC/EasyPC.API/appsettings.Development.json
+++ b/EasyPC/EasyPC.API/appsettings.Development.json
@@ -1,8 +1,18 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=localhost;Database=EasyPC_RS2;Trusted_Connection=True;TrustServerCertificate=True"
+    },
+    "Kestrel": {
+        "Endpoints": {
+            "Http": {
+                "Url": "http://0.0.0.0:5285"
+            }
+        }
     }
-  }
 }
