--- a/EasyPC/EasyPC.API/appsettings.json
+++ b/EasyPC/EasyPC.API/appsettings.json
@@ -5,5 +5,19 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "RabbitMQ": {
+    "Host": "localhost",
+    "Username": "admin",
+    "Password": "admin",
+    "VirtualHost": "/"
+  },
+  "Email": {
+    "SmtpServer": "smtp.office365.com",
+    "SmtpPort": 587,
+    "SenderEmail": "kerim.beha@edu.fit.ba",
+    "SenderName": "EasyPC Support",
+    "SenderPassword": "Student2442",
+    "EnableSsl": true
+  }
 }
