--- a/EasyPC/EasyPC.API/Properties/launchSettings.json
+++ b/EasyPC/EasyPC.API/Properties/launchSettings.json
@@ -8,7 +8,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5025"
+      "applicationUrl": "http://0.0.0.0:5025"
     },
     "https": {
       "commandName": "Project",
